--- a/frontend/src/styles/general/theme-fonts.scss
+++ b/frontend/src/styles/general/theme-fonts.scss
@@ -1,5 +1,17 @@
 @font-face {
     font-family: 'Syne';
+    src: url('static/fonts/Syne-Extra.eot');
+    src: url('static/fonts/Syne-Extra.eot?#iefix') format('embedded-opentype'),
+        url('static/fonts/Syne-Extra.woff2') format('woff2'),
+        url('static/fonts/Syne-Extra.woff') format('woff'),
+        url('static/fonts/Syne-Extra.ttf') format('truetype'),
+        url('static/fonts/Syne-Extra.svg#Syne-Extra') format('svg');
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Syne';
     src: url('static/fonts/Syne-Bold.eot');
     src: url('static/fonts/Syne-Bold.eot?#iefix') format('embedded-opentype'),
         url('static/fonts/Syne-Bold.woff2') format('woff2'),
@@ -35,18 +47,6 @@
 }
 
 @font-face {
-    font-family: 'Syne Extra';
-    src: url('static/fonts/Syne-Extra.eot');
-    src: url('static/fonts/Syne-Extra.eot?#iefix') format('embedded-opentype'),
-        url('static/fonts/Syne-Extra.woff2') format('woff2'),
-        url('static/fonts/Syne-Extra.woff') format('woff'),
-        url('static/fonts/Syne-Extra.ttf') format('truetype'),
-        url('static/fonts/Syne-Extra.svg#Syne-Extra') format('svg');
-    font-weight: 900;
-    font-style: normal;
-}
-
-@font-face {
     font-family: 'Syne Mono';
     src: url('static/fonts/Syne-Mono.eot');
     src: url('static/fonts/Syne-Mono.eot?#iefix') format('embedded-opentype'),
@@ -57,4 +57,6 @@
     font-weight: normal;
     font-style: normal;
 }
+
+$theme-font: 'Syne';
 
