--- a/frontend/src/styles/components/finderImage.scss
+++ b/frontend/src/styles/components/finderImage.scss
@@ -5,13 +5,16 @@
     overflow: hidden;
     border-radius: 5px;
     z-index: 100;
+    transition: transform 1.5s cubic-bezier(.13,1.01,.33,1.11);
+
     img {
         width: 100%;
         height: auto;
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: scale(1.4) translate(-50%, -50%);
+        // transform: scale(1.4) translate(-50%, -50%);
+        transition: transform 2s cubic-bezier(.13,1.01,.33,1.11);
     }
     svg {
         position: absolute;
@@ -26,6 +29,7 @@
 .finderImageVietnam {
     position: absolute;
     opacity: 0;
+
 }
 
 .finderImageVietnam--1 {
