start animation on vietnam page

--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -4,9 +4,11 @@
 
 // pages
 @import 'pages/home';
+@import 'pages/vietnam';
 
 
 // components
 @import 'components/menu';
 @import 'components/header';
 @import 'components/finderImage';
+@import 'components/bigTitle';
