--- a/frontend/src/styles/components/finderImage.scss
+++ b/frontend/src/styles/components/finderImage.scss
@@ -1,28 +1,43 @@
 .finderImg__container {
     position: relative;
-    width: 35vw;
-    height: 22vw;
+    width: 30vw;
+    height: 20vw;
     overflow: hidden;
     border-radius: 5px;
     z-index: 100;
     transition: transform 1.5s cubic-bezier(.13,1.01,.33,1.11);
 
     img {
-        width: 100%;
+        width: 35vw;
         height: auto;
         position: absolute;
         top: 50%;
         left: 50%;
-        // transform: scale(1.4) translate(-50%, -50%);
-        transition: transform 2s cubic-bezier(.13,1.01,.33,1.11);
+        transform: scale(1) translate(-50%, -50%);
+        transition: transform 1s cubic-bezier(.13,1.01,.33,1.11);
     }
     svg {
         position: absolute;
         top: 0;
         left: 0px;
         right: 0px;
-        width: 35vw;
+        width: 100%;
         z-index: 105;
+    }
+    .filter {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: red;
+        mix-blend-mode: darken;
+        opacity: 0;
+    }
+    &.isFilter {
+        .filter {
+            opacity: 1;
+        }
     }
 }
 
@@ -34,8 +49,8 @@
 
 .finderImageVietnam--1 {
     position: absolute;
-    bottom: 100%;
-    right: 100%;
+    bottom: 0%;
+    right: 0%;
     z-index: 101;
 }
 
@@ -51,12 +66,12 @@
     position: absolute;
     top: 100%;
     left: 100%;
-    z-index: 103;
+    z-index: 104;
 }
 
 .finderImageVietnam--4 {
     position: absolute;
     top: 100%;
     right: 100%;
-    z-index: 104;
+    z-index: 103;
 }
