--- a/frontend/src/styles/components/finderImage.scss
+++ b/frontend/src/styles/components/finderImage.scss
@@ -30,7 +30,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: red;
+        background-color: $red;
         mix-blend-mode: darken;
         opacity: 0;
     }
