--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -8,8 +8,10 @@
 @import 'components/finderImage';
 @import 'components/filterImage';
 @import 'components/bigTitle';
+@import 'components/sunshines';
 
 // pages
 @import 'pages/home';
 @import 'pages/vietnam';
 @import 'pages/vietnamTwo';
+@import 'pages/vietnamThree';
