--- a/frontend/src/styles/components/finderImage.scss
+++ b/frontend/src/styles/components/finderImage.scss
@@ -21,7 +21,7 @@
         top: 0;
         left: 0px;
         right: 0px;
-        width: 100%;
+        // width: 100%;
         z-index: 105;
     }
     .filter {
