--- a/frontend/src/styles/components/finderImage.scss
+++ b/frontend/src/styles/components/finderImage.scss
@@ -6,10 +6,11 @@
     border-radius: 5px;
     z-index: 100;
     transition: transform 1s cubic-bezier(.13,1.01,.33,1.11);
+    box-shadow:  0px 23px 38px 0px rgba(0,0,0,0.3);
 
     img {
-        width: 35vw;
-        height: auto;
+        object-fit: cover;
+        min-height: 100%;
         position: absolute;
         top: 50%;
         left: 50%;
