--- a/frontend/src/styles/components/header.scss
+++ b/frontend/src/styles/components/header.scss
@@ -1,7 +1,7 @@
 .header__item {
     font-weight: bold;
     font-size: 1.125rem;
-    position: absolute;
+    position: fixed;
     right: 100px;
     top: 50px;
     z-index: 100;
