add image emboitee animation

--- a/frontend/src/styles/pages/vietnamThree.scss
+++ b/frontend/src/styles/pages/vietnamThree.scss
@@ -41,3 +41,19 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.vietnam__containerSunshine {
+    position: relative;
+    z-index: 109;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.sunshines--bottom {
+    transform: translate3d(0, 100%, 1px);
+}
+.sunshines--top {
+    transform: translate3d(0, -100%, 1px);
+}
