add animation for sevent container vietnam

--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -11,6 +11,7 @@
 @import 'components/filterImage';
 @import 'components/bigTitle';
 @import 'components/sunshines';
+@import 'components/ball';
 
 // pages
 @import 'pages/home';
@@ -19,3 +20,5 @@
 @import 'pages/vietnamThree';
 @import 'pages/vietnamFour';
 @import 'pages/vietnamFive';
+@import 'pages/vietnamSix';
+@import 'pages/vietnamSeven';
