--- a/frontend/src/styles/pages/people.scss
+++ b/frontend/src/styles/pages/people.scss
@@ -10,8 +10,8 @@
     justify-content: center;
 
     .menu__cursor {
-        width: 100px;
-        height: 100px;
+        width: 200px;
+        height: 200px;
         background-blend-mode: difference;
         isolation: isolate;
     }
@@ -33,16 +33,16 @@
         }
     }
     .people__imgContainer {
-        width: 50%;
-        height: 50%;
+        width: 100%;
+        height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
         user-select: none;
     }
     .people__img {
-        max-height: 100%;
-        max-width: 100%;;
+        max-height: 80%;
+        max-width: 80%;
         object-fit: contain;
         user-select: none;
     }
