--- a/frontend/src/styles/pages/people.scss
+++ b/frontend/src/styles/pages/people.scss
@@ -12,24 +12,27 @@
     .menu__cursor {
         width: 200px;
         height: 200px;
-        background-blend-mode: difference;
+        // background-blend-mode: difference;
         isolation: isolate;
+        opacity: 1;
     }
     .cursorText {
         user-select: none;
         isolation: isolate;
         z-index: 100;
-        mix-blend-mode: normal!important;
         color: white;
         font-size: 16px;
         text-align: center;
         position: absolute;
+        mix-blend-mode: difference;
         top: 50%;
         left: 50%;
         transform: translate3d(-50%, -50%, 0);
         span {
+            opacity: 0.99;
             user-select: none;
-
+            isolation: isolate;
+            color: white;
         }
     }
     .people__imgContainer {
