--- a/frontend/src/styles/pages/vietnamThree.scss
+++ b/frontend/src/styles/pages/vietnamThree.scss
@@ -5,8 +5,8 @@
     .finderImg__container {
         position: absolute;
         // z-index: 108;
-        width: 45vw;
-        height: 33vw;
+        width: 500px;
+        height: 330px;
         img {
             width: 100%;
             height: auto;
@@ -33,7 +33,7 @@
 }
 
 .vietnam__item--image31 {
-    width: 40vw;
+    width: 500px;
     height: auto;
     z-index: 110;
     position: absolute;
