--- a/frontend/src/styles/pages/vietnamSix.scss
+++ b/frontend/src/styles/pages/vietnamSix.scss
@@ -7,7 +7,7 @@
     position: absolute;
     bottom: 5vh;
     right: 10vw;
-    width: 50%;
+    width: 500px;
     height: auto;
     .filter {
         height: 96.3%;
@@ -18,7 +18,7 @@
     top: 5vh;
     left: 10vw;
     width: unset;
-    width: 50%;
+    width: 500px;
     height: auto;
     .filter {
         height: 96.3%;
@@ -29,7 +29,7 @@
     top: 50%;
     left: 50%;
     transform: translate3d(-50%, -50%, 0);
-    width: 40%;
+    width: 500px;
     z-index: 120;
 }
 
