--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -7,6 +7,7 @@
 @import 'components/menu';
 @import 'components/header';
 @import 'components/backButton';
+@import 'components/loadingScreen';
 @import 'components/finderImage';
 @import 'components/filterImage';
 @import 'components/bigTitle';
