add blocking scroll for loading screen

--- a/frontend/src/styles/pages/vietnam.scss
+++ b/frontend/src/styles/pages/vietnam.scss
@@ -1,6 +1,9 @@
 .bigSize {
     height: 10000px;
 }
+.bigSize--notloaded {
+    height: 100vh;
+}
 .container {
     position: fixed;
     height: 1000px;
