--- a/frontend/src/styles/components/loadingScreen.scss
+++ b/frontend/src/styles/components/loadingScreen.scss
@@ -24,11 +24,14 @@
 
 .loadingScreen__emoji {
     margin: 0px 15px;
+    &:nth-of-type(1){
+        animation: opacityFirstItemAnimation 1.5s  linear infinite alternate-reverse;
+    }
     &:nth-of-type(2){
-        animation: opacityLongAnimation 1.5s  linear infinite;
+        animation: opacitySecondItemAnimation 1.5s  linear infinite alternate-reverse;
     }
     &:nth-of-type(3){
-        animation: opacitySmallAnimation 1.5s  linear infinite;
+        animation: opacityThirdItemAnimation 1.5s  linear infinite alternate-reverse;
     }
 }
 
