add scrolling banner component

--- a/frontend/src/styles/general/theme-animations.scss
+++ b/frontend/src/styles/general/theme-animations.scss
@@ -24,3 +24,8 @@
     26% { opacity: 0 ; }
     100% { opacity: 0 ; } 
 }
+
+@keyframes translateAnimation { 
+    from { transform: translateX(100%) ; } 
+    to { transform: translateX(-100%) ; } 
+}
