--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -8,6 +8,7 @@
 @import 'components/header';
 @import 'components/backButton';
 @import 'components/loadingScreen';
+@import 'components/scrollingBanner';
 @import 'components/finderImage';
 @import 'components/filterImage';
 @import 'components/bigTitle';
