--- a/frontend/src/styles/components/menu.scss
+++ b/frontend/src/styles/components/menu.scss
@@ -48,3 +48,16 @@
     width: 300px;
     height: 300px;
 }
+.menuRandom {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    opacity: 0;
+    will-change: opacity;
+    img {
+        height: 100%;
+        width: auto;
+        margin-right: 20px;
+    }
+}
