--- a/frontend/src/styles/components/loadingScreen.scss
+++ b/frontend/src/styles/components/loadingScreen.scss
@@ -38,5 +38,15 @@
 .loadingScreen__text {
     width: 80%;
     text-align: center;
-    font-size: 4.3rem;
+    font-size: 5vw;
+
+    @media screen and (max-width: 1200px) {
+        width: 70%;
+        font-size: 4.5vw;
+    }
+    @media screen and (max-width: 1000px) {
+        width: 70%;
+        font-size: 5vw;
+
+    }
 }
