--- a/frontend/src/styles/components/scrollingBanner.scss
+++ b/frontend/src/styles/components/scrollingBanner.scss
@@ -13,20 +13,25 @@
     align-items: center;
 }
 .scrollingBanner__text {
+    position: absolute;
     display: inline-block;
     font-size: 2rem;
     padding: 0px 15px;
-    width: 100vw;
+    min-width: 100vw;
 
     &:nth-of-type(1){
         transform: translateX(100%);
-        animation: translateAnimation 10s  linear infinite ;
+        animation: translateAnimation 15s  linear infinite ;
     }
     &:nth-of-type(2){
         transform: translateX(100%);
-        animation: translateAnimation 10s 5s linear infinite ;
+        animation: translateAnimation 15s 8s linear infinite ;
     }
     span {
         display: inline-block;
+    }
+    @media screen and (max-width: 800px) {
+        width: 70%;
+        font-size: 1.2rem;
     }
 }
