--- a/frontend/src/styles/general/theme-general.scss
+++ b/frontend/src/styles/general/theme-general.scss
@@ -6,6 +6,19 @@ body {
     font-weight: 900;
     font-size: 4.3rem;
     text-transform: uppercase;
+
+    @media screen and (max-width: 1000px) {
+        font-size: 3.5rem;
+    }
+    @media screen and (max-width: 900px) {
+        font-size: 2.8rem;
+    }
+    @media screen and (max-width: 700px) {
+        font-size: 2rem;
+    }
+    @media screen and (max-width: 500px) {
+        font-size: 1.2rem;
+    }
 }
 
 a {
