--- a/frontend/src/styles/pages/vietnamSeven.scss
+++ b/frontend/src/styles/pages/vietnamSeven.scss
@@ -4,12 +4,16 @@
 }
 
 .vietnam__item--71 {
-    min-height: 100vh;
+    height: 100vh;
     min-width: 100vw;
     width: 100%;
+    -o-object-fit: contain;
     object-fit: contain;
     position: absolute;
-    bottom: -30px;
+    img {
+        min-width: 100%;
+        height: 100vh;
+    }
 }
 
 .vietnam__item--72 {
@@ -125,11 +129,10 @@
     z-index: 104;
 }
 .vietnam__item--715 {
-    // opacity: 1;
-    height: 100%;
+    min-height: 100%;
     position: absolute;
     bottom: 0%;
-    width: auto;
+    width: 100%;
     z-index: 200;
 }
 
