--- a/frontend/src/styles/components/scrollingBanner.scss
+++ b/frontend/src/styles/components/scrollingBanner.scss
@@ -6,12 +6,7 @@
     width: 100vw;
     z-index: 1002;
 }
-.scrollingBanner--vietnam {
-    color: white;
-    background-color: $yellow;
-    display: flex;
-    align-items: center;
-}
+
 .scrollingBanner__text {
     position: absolute;
     display: inline-block;
@@ -33,5 +28,41 @@
     @media screen and (max-width: 800px) {
         width: 70%;
         font-size: 1.2rem;
+    }
+}
+
+.scrollingBanner--vietnam {
+    color: white;
+    background-color: $yellow;
+    display: flex;
+    align-items: center;
+}
+
+
+.scrollingBanner--about {
+    color: white;
+    background-color: $lightYellow;
+    display: flex;
+    align-items: center;
+    position: relative;
+    height: 30vh;
+    .scrollingBanner__text {
+        font-size: 12vw;
+        span {
+            padding: 0 44vw 0 0;
+        }
+
+        &:nth-of-type(1){
+            transform: translateX(100%);
+            animation: translateAnimation 21s  linear infinite ;
+        }
+        &:nth-of-type(2){
+            transform: translateX(100%);
+            animation: translateAnimation 21s 7s linear infinite ;
+        }
+        &:nth-of-type(3){
+            transform: translateX(100%);
+            animation: translateAnimation 21s 14s linear infinite ;
+        }
     }
 }
