add compressed picture + animation page about

--- a/frontend/src/styles/general/theme-animations.scss
+++ b/frontend/src/styles/general/theme-animations.scss
@@ -1,3 +1,7 @@
+.animate {
+    transition: transform 2000ms cubic-bezier(.19,1,.22,1);
+}
+
 @keyframes rotateAnimation { 
     from { transform: rotateZ(0deg) ; } 
     to { transform: rotateZ(360deg) ; } 
