--- a/frontend/src/styles/components/scrollingBanner.scss
+++ b/frontend/src/styles/components/scrollingBanner.scss
@@ -66,3 +66,25 @@
         }
     }
 }
+
+.scrollingBanner--about2 {
+    position: relative;
+    background-color: #2C2728;
+    height: 40px;
+    .scrollingBanner__text {
+        color: white;
+        font-size: 15px;
+        margin-top: 7px;
+        display: flex;
+        justify-content: space-around;
+        width: 150vw;
+        &:nth-of-type(1){
+            transform: translateX(100%);
+            animation: translateAnimation 30s  linear infinite ;
+        }
+        &:nth-of-type(2){
+            transform: translateX(100%);
+            animation: translateAnimation 30s 15s linear infinite ;
+        }
+    }
+}
