--- a/frontend/src/styles/components/menu.scss
+++ b/frontend/src/styles/components/menu.scss
@@ -15,7 +15,8 @@
     z-index: 200;
     position: relative;
     transform-origin: left;
-    // width: fit-content;
+    margin: 50px 0;
+    width: fit-content;
 }
 
 .people__item {
