--- a/frontend/src/styles/general/theme-animations.scss
+++ b/frontend/src/styles/general/theme-animations.scss
@@ -1,5 +1,6 @@
 .animate {
     transition: transform 2000ms cubic-bezier(.19,1,.22,1);
+    transform-origin: left;
 }
 
 @keyframes rotateAnimation { 
