--- a/frontend/src/styles/pages/about.scss
+++ b/frontend/src/styles/pages/about.scss
@@ -29,7 +29,8 @@
 
 .about__explanation {
     font-size: 1.5rem;
-    text-align: center;
+    text-align: left;
+    // text-align: center;
     width: 60%;
     text-transform: unset;
     margin: 100px;
