--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -1,4 +1,5 @@
 @import 'general/theme-colors';
+@import 'general/theme-responsive';
 @import 'general/theme-fonts';
 @import 'general/theme-general';
 @import 'general/theme-animations';
