--- a/frontend/src/styles/components/loadingScreen.scss
+++ b/frontend/src/styles/components/loadingScreen.scss
@@ -20,7 +20,7 @@
     margin-top: 30px;
     display: flex;
 
-}
+} 
 
 .loadingScreen__emoji {
     margin: 0px 15px;
@@ -33,6 +33,9 @@
     &:nth-of-type(3){
         animation: opacityThirdItemAnimation 1s  linear infinite alternate-reverse;
     }
+    @include tablet {
+        font-size: 4rem;
+    }
 }
 
 .loadingScreen__text {
@@ -40,13 +43,10 @@
     text-align: center;
     font-size: 5vw;
 
-    @media screen and (max-width: 1200px) {
-        width: 70%;
-        font-size: 4.5vw;
-    }
-    @media screen and (max-width: 1000px) {
-        width: 70%;
-        font-size: 5vw;
-
+    @include tablet {
+        width: 90%;
+        font-size: 10vw;
+        word-break: break-word;
+        hyphens: auto;
     }
 }
