--- a/frontend/src/styles/pages/vietnamSix.scss
+++ b/frontend/src/styles/pages/vietnamSix.scss
@@ -12,6 +12,14 @@
     .filter {
         height: 96.3%;
     }
+    @include tablet {
+        width: 335px;
+        height: 226px;
+        bottom: 25vh;
+        .filter {
+            height: 100%;
+        }
+    }
 }
 .vietnam__item--62 {
     position: absolute;
@@ -23,6 +31,12 @@
     .filter {
         height: 96.3%;
     }
+    @include tablet {
+        width: 290px;
+        height: 195px;
+        left: 5vw;
+        top: 20vh;
+    }
 }
 .vietnam__item--63 {
     position: absolute;
@@ -31,6 +45,10 @@
     transform: translate3d(-50%, -50%, 0);
     width: 500px;
     z-index: 120;
+    @include tablet {
+        width: 340px;
+        height: 238px;
+    }
 }
 
 .vietnam__ball--61 {
@@ -39,6 +57,11 @@
     left: 15%;
     z-index: 130;
     transform: translate3d(100%, 0, 0);
+    @include tablet {
+        top: 5%;
+        left: 35%;
+        transform: translate3d(100%, 0, 0);
+    }
 }
 .vietnam__ball--62 {
     position: absolute;
@@ -46,4 +69,9 @@
     right: 15%;
     z-index: 130;
     transform: translate3d(100%, 0, 0);
+    @include tablet {
+        bottom: 5%;
+        right: 35%;
+        transform: translate3d(100%, 0, 0);
+    }
 }
