--- a/frontend/src/styles/pages/vietnamTwo.scss
+++ b/frontend/src/styles/pages/vietnamTwo.scss
@@ -6,11 +6,26 @@
     position: absolute;
     left: 15%;
     top: 15%;
+    @include tablet {
+        width: 243px;
+        height: 165px;
+        top: 20%;
+        left: 5%;
+        right: unset;
+    }
 }
 .vietnam__item--6 {
     position: absolute;
     right: 15%;
     bottom: 10%;
+    @include tablet {
+        width: 293px;
+        height: 196px;
+        bottom: unset;
+        top: 35%;
+        right: 5%;
+        left: unset;
+    }
 }
 
 .vietnam__item--7 {
@@ -18,6 +33,12 @@
     left: 7%;
     bottom: 7%;
     z-index: 201;
+    @include tablet {
+        width: 319px;
+        height: 215px;
+        left: 5%;
+        bottom: 12%;
+    }
 }
 
 .vietnam__container--mediumTitle {
@@ -28,6 +49,9 @@
     right: 0;
     // top: 0%;
     top: 100%;
+    @include tablet {
+        padding-right: 5%;
+    }
     h3 {
         color: $red;
         font-size: 10vw;
