switch sunshine emoji to png

--- a/frontend/src/styles/components/sunshines.scss
+++ b/frontend/src/styles/components/sunshines.scss
@@ -9,4 +9,9 @@
     font-size: 20vh;
     height: 20vh;
     width: fit-content;
+    text-align: center;
+    img {
+        height: 22vh;
+        width: auto;
+    }
 }
