add next project to vietnam

--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -9,6 +9,7 @@
 @import 'components/header';
 @import 'components/backButton';
 @import 'components/loadingScreen';
+@import 'components/nextProject';
 @import 'components/scrollingBanner';
 @import 'components/finderImage';
 @import 'components/filterImage';
