add get bored component

--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -11,6 +11,7 @@
 @import 'components/loadingScreen';
 @import 'components/nextProject';
 @import 'components/scrollingBanner';
+@import 'components/gotBored';
 @import 'components/finderImage';
 @import 'components/filterImage';
 @import 'components/bigTitle';
