--- a/frontend/src/styles/pages/people.scss
+++ b/frontend/src/styles/pages/people.scss
@@ -1,4 +1,5 @@
 .people__container {
+    cursor: none;
     width: 100vw;
     height: 100vh;
     position: absolute;
@@ -8,17 +9,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    @include tablet {
+        cursor: text;
+
+    }
 
     .menu__cursor {
         width: 200px;
         height: 200px;
         // background-blend-mode: difference;
-        isolation: isolate;
+        // isolation: isolate;
         opacity: 1;
     }
     .cursorText {
         user-select: none;
-        isolation: isolate;
+        // isolation: isolate;
         z-index: 100;
         color: white;
         font-size: 16px;
@@ -31,17 +36,20 @@
         span {
             opacity: 0.99;
             user-select: none;
-            isolation: isolate;
+            // isolation: isolate;
             color: white;
         }
     }
     .people__imgContainer {
+        background-color: red;
         width: 100%;
         height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
         user-select: none;
+        z-index: 200;
+        position: relative;
     }
     .people__img {
         max-height: 80%;
@@ -52,19 +60,24 @@
 }
 
 .menu__cursor.menu__cursor--mobile {
+    z-index: 800;
     position: absolute;
     width: 130px;
     height: 130px;
     bottom: 15vh;
     top: unset;
+    cursor: pointer;
+
 }
 
 .menu__cursor--next {
-    right: 50%;
-    left: unset;
-    transform: translate3d(90%, 0, 1px);
+    z-index: 1000;
+    // right: 50%;
+    // left: unset;
+    // transform: translate3d(90%, 0, 1px);
 }
 .menu__cursor--prev {
-    left: 50%;
-    transform: translate3d(-90%, 0, 1px);
+    z-index: 1000;
+    // left: 50%;
+    // transform: translate3d(-90%, 0, 1px);
 }
