--- a/frontend/src/styles/pages/people.scss
+++ b/frontend/src/styles/pages/people.scss
@@ -41,7 +41,6 @@
         }
     }
     .people__imgContainer {
-        background-color: red;
         width: 100%;
         height: 100%;
         display: flex;
@@ -72,12 +71,12 @@
 
 .menu__cursor--next {
     z-index: 1000;
-    // right: 50%;
-    // left: unset;
-    // transform: translate3d(90%, 0, 1px);
+    right: 50%;
+    left: unset;
+    transform: translate3d(90%, 0, 1px);
 }
 .menu__cursor--prev {
     z-index: 1000;
-    // left: 50%;
-    // transform: translate3d(-90%, 0, 1px);
+    left: 50%;
+    transform: translate3d(-90%, 0, 1px);
 }
