--- a/frontend/src/styles/components/backButton.scss
+++ b/frontend/src/styles/components/backButton.scss
@@ -10,4 +10,7 @@
     &:hover {
         animation: rotateAnimation 0.5s infinite linear ;
     }
+    .backButton__svg--black g {
+        fill: rgb(0,0,0);
+    }
 }
