--- a/frontend/src/styles/pages/vietnam.scss
+++ b/frontend/src/styles/pages/vietnam.scss
@@ -1,5 +1,64 @@
 .bigSize {
     height: 10000px;
+    &:after {
+        display: none;
+        content: 
+            url(static/images/vietnam/vietnam01.png) 
+            url(static/images/vietnam/vietnam02.png) 
+            url(static/images/vietnam/vietnam03.png) 
+            url(static/images/vietnam/vietnam04.png) 
+            url(static/images/vietnam/vietnam05.png) 
+            url(static/images/vietnam/vietnam06.png) 
+            url(static/images/vietnam/vietnam08.png) 
+            url(static/images/vietnam/vietnam09.png) 
+            url(static/images/vietnam/vietnam23.png) 
+            url(static/images/vietnam/vietnam10.png) 
+            url(static/images/vietnam/vietnam13.png) 
+            url(static/images/vietnam/vietnam14.png) 
+            url(static/images/vietnam/vietnam15.png) 
+            url(static/images/vietnam/vietnam16.png) 
+            url(static/images/vietnam/vietnam17.png) 
+            url(static/images/vietnam/vietnam18.png) 
+            url(static/images/vietnam/vietnam19.png) 
+            url(static/images/vietnam/vietnam20.png) 
+            url(static/images/vietnam/vietnam21.png) 
+            url(static/images/vietnam/vietnam22.png) 
+            url(static/images/vietnam/vietnam24.png) 
+            url(static/images/vietnam/vietnam25.png) 
+            url(static/images/vietnam/vietnam26.png) 
+            url(static/images/vietnam/vietnam27.png) 
+            url(static/images/vietnam/vietnam28.png) 
+            url(static/images/vietnam/vietnam29.png) ;
+        @include tablet {
+            content: 
+                url(static/images/vietnam/vietnam-min/1-min.png) 
+                url(static/images/vietnam/vietnam-min/2-min.png) 
+                url(static/images/vietnam/vietnam-min/3-min.png) 
+                url(static/images/vietnam/vietnam-min/4-min.png) 
+                url(static/images/vietnam/vietnam-min/5-min.png) 
+                url(static/images/vietnam/vietnam-min/6-min.png) 
+                url(static/images/vietnam/vietnam-min/8-min.png) 
+                url(static/images/vietnam/vietnam-min/9-min.png) 
+                url(static/images/vietnam/vietnam-min/23-min.png) 
+                url(static/images/vietnam/vietnam-min/10-min.png) 
+                url(static/images/vietnam/vietnam-min/13-min.png) 
+                url(static/images/vietnam/vietnam-min/14-min.png) 
+                url(static/images/vietnam/vietnam-min/15-min.png) 
+                url(static/images/vietnam/vietnam-min/16-min.png) 
+                url(static/images/vietnam/vietnam-min/17-min.png) 
+                url(static/images/vietnam/vietnam-min/18-min.png) 
+                url(static/images/vietnam/vietnam-min/19-min.png) 
+                url(static/images/vietnam/vietnam-min/20-min.png) 
+                url(static/images/vietnam/vietnam-min/21-min.png) 
+                url(static/images/vietnam/vietnam-min/22-min.png) 
+                url(static/images/vietnam/vietnam-min/24-min.png) 
+                url(static/images/vietnam/vietnam-min/25-min.png) 
+                url(static/images/vietnam/vietnam-min/26-min.png) 
+                url(static/images/vietnam/vietnam-min/27-min.png) 
+                url(static/images/vietnam/vietnam-min/28-min.png) 
+                url(static/images/vietnam/vietnam-min/29-min.png) ;
+        }
+    }
 }
 .bigSize--notloaded {
     height: 100vh;
