--- a/frontend/src/styles/general/theme-animations.scss
+++ b/frontend/src/styles/general/theme-animations.scss
@@ -8,6 +8,10 @@
     to { transform: rotateZ(360deg) ; } 
 }
 
+@keyframes opacity{ 
+    0% { opacity: 0 ; } 
+    100% { opacity: 1 ; } 
+}
 @keyframes opacityFirstItemAnimation { 
     0% { opacity: 1 ; } 
     75% { opacity: 1 ; } 
