recette for vietnam page

--- a/frontend/src/styles/pages/vietnamSeven.scss
+++ b/frontend/src/styles/pages/vietnamSeven.scss
@@ -199,9 +199,9 @@
 }
 .vietnam__hugeTitle {
     color: $yellow;
-    line-height: 0.8;
+    line-height: 8vh;
     margin: 0;
-    font-size: 10vh;
+    font-size: 11.7vh;
     font-weight: 1000;
     transform-origin: bottom left;
     transform: scaleY(14.3) scaleX(3.2) translateX(100%);
