--- a/frontend/src/styles/components/nextProject.scss
+++ b/frontend/src/styles/components/nextProject.scss
@@ -14,10 +14,12 @@
         color: $yellow;
         font-size: 2.3rem;
         text-align: center;
+        // transform: translateY(30%);
+
     }
     a {
         color: $yellow;
-        text-decoration: line $yellow;
+        border-bottom: 2px $yellow solid;
     }
 }
 
